tests/invalid/arithmetic_type_error.alu
function () do
begin
int x = 5;
bool y = true;
int z = x + y;
end
test

